# any-llm-orchestrator

./: .gitignore  AGENTS.md  README.md  dashboard.py  orchestrate.py  pyproject.toml
.opencode/agents/: architect.md  code-reviewer.md  designer.md  pr-creator.md  product-manager.md  reviewer.md
.opencode/plans/: per-repo-log-chevron.md  targeted-test-execution.md
.playwright-mcp/: page-2026-04-15T18-26-06-372Z.yml  page-2026-04-15T18-33-58-310Z.yml  page-2026-04-15T18-37-08-077Z.yml  page-2026-04-15T18-37-16-986Z.yml
dashboard/: index.html
dashboard/css/: dashboard.css  theme.css
dashboard/js/: dashboard.js
lib/: __init__.py  architect.py  config.py  costs.py  engineer.py  intake.py  parse.py  pr.py  prd.py  repo_runner.py  status.py  workspace.py
specs/add-batch-api-support/: any-llm-addressed-comments.json  any-llm-ci-failures.md  any-llm-go-ci-failures.md  any-llm-go-pr-feedback.md  any-llm-go-rebase-conflicts.md  any-llm-go-review.md  any-llm-go-spec.md  any-llm-pr-feedback.md  any-llm-rebase-conflicts.md  any-llm-review.md  any-llm-rust-pr-feedback.md  any-llm-rust-review.md  any-llm-rust-spec.md  any-llm-spec.md  any-llm-ts-ci-failures.md  any-llm-ts-pr-feedback.md  any-llm-ts-review.md  any-llm-ts-spec.md  costs.json  cross-review.md  design.md  gateway-ci-failures.md  gateway-pr-feedback.md  gateway-review.md  gateway-spec.md  input.md  prd.md  status.json  tech-spec.md  triage.json
specs/rename-auth-header-anyllm-key/: any-llm-build-failures.md  any-llm-ci-failures.md  any-llm-go-review.md  any-llm-go-spec.md  any-llm-platform-build-failures.md  any-llm-platform-ci-failures.md  any-llm-platform-review.md  any-llm-platform-spec.md  any-llm-rebase-conflicts.md  any-llm-review.md  any-llm-rust-review.md  any-llm-rust-spec.md  any-llm-spec.md  any-llm-ts-ci-failures.md  (+8 more)
totomisu/: __init__.py  architect.py  cli.py  config.py  costs.py  dashboard_server.py  engineer.py  intake.py  parse.py  prd.py  repo_runner.py  status.py  workspace.py
(+11 files in other folders)
