[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "totomisu"
version = "0.1.0"
description = "Multi-repo orchestrator for the any-llm ecosystem"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
totomisu = "totomisu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["totomisu"]

# This project has no pip-installable dependencies, but requires the
# following system tools to be installed and available on PATH:
#
# Required:
#   - opencode          AI coding agent CLI (https://opencode.ai)
#   - gh                GitHub CLI (https://cli.github.com)
#   - git               Git version control
#   - tmux              Terminal multiplexer (parallel repo pipelines)
#
# Optional:
#   - uv                Python package manager (https://docs.astral.sh/uv)
#                       Used by individual repo test commands (pytest, etc.)
#   - wt                Git worktree helper (https://github.com/nicholasgasior/wt)
#                       Falls back to `git worktree add` if not installed.
